Role security and refactoring.

--- a/Odin/Errors/404.html
+++ b/Odin/Errors/404.html
@@ -8,6 +8,6 @@
 <body>
 <h1 style="font-family: 'Open Sans', sans-serif; font-weight: 300; color: rgb(100,100,100)">We're sorry,</h1>
 <p  style="font-family: 'Open Sans', sans-serif; font-weight: 500; color: rgb(50,50,50)">Something went wrong...</p>
-<p style="font-family: 'Open Sans', sans-serif; font-weight: 500; color: rgb(50,50,50)">The page you tried to access isn't loading properly. Please return to <a href="/">homepage</a> and try again.</p>
+<p style="font-family: 'Open Sans', sans-serif; font-weight: 500; color: rgb(50,50,50)">The page you tried to access isn't loading properly. Please return to <a href="/role">homepage</a> and try again.</p>
 </body>
 </html>
